--- a/gurps4e.css
+++ b/gurps4e.css
@@ -993,14 +993,14 @@
 .location-torso-vitals {
 	grid-column: 8 / 12;
 	grid-row: 16 / 18;
-	z-index: 2;
+	z-index: 1;
 	background-color: #FF0000;
 }
 
 .location-abdomen-vitals {
 	grid-column: 8 / 12;
 	grid-row: 18 / 20;
-	z-index: 2;
+	z-index: 1;
 	background-color: #FF0000;
 }
 
@@ -1035,6 +1035,20 @@
 	grid-column: 12 / 16;
 	grid-row: 26 / 30;
 	background-color: #DA9694;
+}
+
+.location-thigh-artery-left {
+	grid-column: 5 / 7;
+	grid-row: 27 / 30;
+	z-index: 1;
+	background-color: #bb5b58;
+}
+
+.location-thigh-artery-right {
+	grid-column: 13 / 15;
+	grid-row: 27 / 30;
+	z-index: 1;
+	background-color: #bb5b58;
 }
 
 .location-knee-left {
