Fixed if statement for palms.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -826,7 +826,7 @@
 								</div>
 							</span>
 						</div>
-						{{#if data.bodyType.chinks.sole}}
+						{{#if data.bodyType.chinks.palm}}
 							<div class="tooltip location-palm-left">
 								{{data.bodyType.drTypesOne.handLeftextremity}}{{#if (and data.bodyType.drTypesOne.handLeftextremity data.bodyType.drTypesTwo.handLeftextremity)}} / {{/if}}{{data.bodyType.drTypesTwo.handLeftextremity}}
 								<span class="tooltiptext">
