--- a/gurps4e.css
+++ b/gurps4e.css
@@ -902,6 +902,54 @@
 	background-color: #31869B;
 }
 
+.location-wing-shoulder-left {
+	grid-column: 6 / 10;
+	grid-row: 8 / 10;
+	background-color: #ffeeee;
+}
+
+.location-wing-shoulder-right {
+	grid-column: 20 / 24;
+	grid-row: 8 / 10;
+	background-color: #ffeeee;
+}
+
+.location-upper-wing-left {
+	grid-column: 5 / 9;
+	grid-row: 6 / 8;
+	background-color: #ffffff;
+}
+
+.location-upper-wing-right {
+	grid-column: 21 / 25;
+	grid-row: 6 / 8;
+	background-color: #ffffff;
+}
+
+.location-wing-elbow-left {
+	grid-column: 4 / 8;
+	grid-row: 4 / 6;
+	background-color: #efeeff;
+}
+
+.location-wing-elbow-right {
+	grid-column: 22 / 26;
+	grid-row: 4 / 6;
+	background-color: #efeeff;
+}
+
+.location-forewing-left {
+	grid-column: 3 / 7;
+	grid-row: 2 / 4;
+	background-color: #ffffff;
+}
+
+.location-forewing-right {
+	grid-column: 23 / 27;
+	grid-row: 2 / 4;
+	background-color: #ffffff;
+}
+
 .location-shoulder-left {
 	grid-column: 6 / 10;
 	grid-row: 10 / 13;
@@ -987,6 +1035,94 @@
 .location-palm-right {
 	grid-column: 25 / 28;
 	grid-row: 23 / 24;
+	background-color: #60497A;
+}
+
+.location-lower-shoulder-left {
+	grid-column: 6 / 10;
+	grid-row: 21 / 24;
+	z-index: 1;
+	background-color: #76933C;
+}
+
+.location-lower-shoulder-right {
+	grid-column: 20 / 24;
+	grid-row: 21 / 24;
+	z-index: 1;
+	background-color: #76933C;
+}
+
+.location-lower-upper-arm-left {
+	grid-column: 5 / 8;
+	grid-row: 24 / 27;
+	background-color: #C4D79B;
+}
+
+.location-lower-upper-arm-right {
+	grid-column: 22 / 25;
+	grid-row: 24 / 27;
+	background-color: #C4D79B;
+}
+
+.location-lower-elbow-left {
+	grid-column: 4 / 7;
+	grid-row: 27 / 29;
+	background-color: #4F6228;
+	color: blanchedalmond;
+}
+
+.location-lower-elbow-right {
+	grid-column: 23 / 26;
+	grid-row: 27 / 29;
+	background-color: #4F6228;
+	color: blanchedalmond;
+}
+
+.location-lower-forearm-left {
+	grid-column: 3 / 6;
+	grid-row: 29 / 32;
+	background-color: #EBF1DE;
+}
+
+.location-lower-forearm-right {
+	grid-column: 24 / 27;
+	grid-row: 29 / 32;
+	background-color: #EBF1DE;
+}
+
+.location-lower-wrist-left {
+	grid-column: 2 / 5;
+	grid-row: 32 / 33;
+	background-color: #E4DFEC;
+}
+
+.location-lower-wrist-right {
+	grid-column: 25 / 28;
+	grid-row: 32 / 33;
+	background-color: #E4DFEC;
+}
+
+.location-lower-hand-left {
+	grid-column: 2 / 5;
+	grid-row: 33 / 34;
+	background-color: #B1A0C7;
+}
+
+.location-lower-hand-right {
+	grid-column: 25 / 28;
+	grid-row: 33 / 34;
+	background-color: #B1A0C7;
+}
+
+.location-lower-palm-left {
+	grid-column: 2 / 5;
+	grid-row: 34 / 35;
+	background-color: #60497A;
+}
+
+.location-lower-palm-right {
+	grid-column: 25 / 28;
+	grid-row: 34 / 35;
 	background-color: #60497A;
 }
 
