--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1042,7 +1042,7 @@
 	grid-column: 6 / 10;
 	grid-row: 21 / 24;
 	z-index: 1;
-	background-color: #76933C;
+	background-color: #76933c;
 }
 
 .location-lower-shoulder-right {
